# f405_LegoDriver

./: .gitignore  CMakeLists.txt  README.md  STM32F405RGTx_FLASH.ld  f405_LegoDriver.ioc  pin_assign.xlsx
Core/: .gitignore
Core/Inc/: main.h
Core/Src/: stm32f4xx_it.c
USB_DEVICE/App/: usbd_cdc_if.c
User/: application.cpp  application.h  constants.h
User/common/: alloc.hpp  big_endian.hpp  little_endian.hpp  mutex.hpp
User/control/: gpio.hpp  motor.cpp  motor.h  pid.hpp  rotary.hpp
User/device/: fonts.cpp  fonts.h  i2c_device_base.hpp  ina219.cpp  ina219.h  ssd1306.cpp  ssd1306.h
User/message/: msgdef.h  msglib.cpp  msglib.h
User/peripheral/: encoder.cpp  encoder.h  i2c.cpp  i2c.h
User/task/: appTask.cpp  i2cOledTask.cpp  i2cTask.cpp  keyTask.cpp  resource.h  usbTask.cpp
